<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:elevation="4dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="end"
        android:padding="5dp"
        android:background="#1D95AAF4">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:padding="0dp"
            android:id="@+id/image_view_card_image"
            android:layout_gravity="start"
            android:contentDescription="@string/card_image" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_weight="0.8"
            android:orientation="vertical"
            android:gravity="start">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorOrange"
                android:textSize="24sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:hint="@string/business_name_hint"
                android:background="@android:color/transparent"
                android:id="@+id/text_view_business_name"
                android:fontFamily="@font/poppins_italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorDarkGray"
                android:textSize="18sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:hint="@string/address_hint"
                android:background="@android:color/transparent"
                android:id="@+id/text_view_business_address"
                android:fontFamily="@font/cheyenne_sans_italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorDarkGray"
                android:textSize="18sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:hint="@string/phone_hint"
                android:background="@android:color/transparent"
                android:id="@+id/text_view_business_phone"
                android:fontFamily="@font/clear_sans_regular" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorDarkGray"
                android:textSize="18sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:hint="@string/email_hint"
                android:background="@android:color/transparent"
                android:id="@+id/text_view_business_email"
                android:fontFamily="@font/clear_sans_regular" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>