<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorYellow"
    android:gravity="center_vertical|center_horizontal"
    android:padding="8dp"
    tools:context=".Fragment.AdPlansFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_update_subscription"
            android:background="@drawable/rounded_corner_rectangle"
            android:textSize="18sp"
            android:padding="10dp"
            android:gravity="center"
            android:textStyle="italic" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:visibility="invisible"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@drawable/rounded_corner_rectangle"
            android:gravity="end" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/month_plan_heading"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="30sp"
                android:textColor="@color/colorOrange"
                android:drawableStart="@drawable/monthly" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/month_plan_description"
                android:textSize="20sp"
                android:textColor="@color/colorOrange"
                android:fontFamily="@font/clear_sans_regular" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_view_price_monthly_plan"
                android:text="@string/default_price"
                android:textColor="@color/colorOrange"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:textSize="25sp"
                android:fontFamily="@font/cheyenne_sans_regular"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:visibility="invisible" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_monthly_plan"
                android:text="@string/select"
                android:background="@drawable/rounded_corner_rectangle_green" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:visibility="invisible"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@drawable/rounded_corner_rectangle"
            android:gravity="end" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_3_month_plan_heading"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="30sp"
                android:textColor="@color/colorOrange"
                android:drawableStart="@drawable/_3month" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="8dp"
                android:layout_weight="1"
                android:text="@string/_3_month_plan_description"
                android:textSize="20sp"
                android:textColor="@color/colorOrange"
                android:fontFamily="@font/clear_sans_regular" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_view_price_3month_plan"
                android:text="@string/default_price"
                android:textColor="@color/colorOrange"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:textSize="25sp"
                android:fontFamily="@font/cheyenne_sans_regular" />

            <View
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:visibility="invisible" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_3month_plan"
                android:text="@string/select"
                android:background="@drawable/rounded_corner_rectangle_green" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:visibility="invisible"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@drawable/rounded_corner_rectangle"
            android:gravity="end" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_6_month_plan_heading"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="30sp"
                android:textColor="@color/colorOrange"
                android:drawableStart="@drawable/_6month" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="8dp"
                android:layout_weight="1"
                android:text="@string/_6_month_plan_description"
                android:textSize="20sp"
                android:textColor="@color/colorOrange"
                android:fontFamily="@font/clear_sans_regular" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_view_price_6month_plan"
                android:text="@string/default_price"
                android:textColor="@color/colorOrange"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:textSize="25sp"
                android:fontFamily="@font/cheyenne_sans_regular"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:visibility="invisible" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_6month_plan"
                android:text="@string/select"
                android:background="@drawable/rounded_corner_rectangle_green" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:visibility="invisible"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@drawable/rounded_corner_rectangle"
            android:gravity="end" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/year_plan_heading"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="30sp"
                android:textColor="@color/colorOrange"
                android:drawableStart="@drawable/yearly" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="8dp"
                android:layout_weight="1"
                android:text="@string/year_plan_description"
                android:textSize="20sp"
                android:textColor="@color/colorOrange"
                android:fontFamily="@font/clear_sans_regular" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_view_price_yearly_plan"
                android:text="@string/default_price"
                android:textColor="@color/colorOrange"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:textSize="25sp"
                android:fontFamily="@font/cheyenne_sans_regular"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:visibility="invisible" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_yearly_plan"
                android:text="@string/select"
                android:background="@drawable/rounded_corner_rectangle_green" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:visibility="invisible"/>

    </LinearLayout>
</ScrollView>